# feishu-mcp

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: api.md  requirements.md  workplan.md
scripts/: start_webhook.py
src/feishu_mcp/: __init__.py  auth.py  server.py
src/feishu_mcp/tools/: __init__.py  calendar.py  documents.py  messages.py  tasks.py  users.py
src/feishu_mcp/webhook/: __init__.py  handler.py  longconn.py
tests/: test_auth.py  test_documents.py  test_messages.py  test_upload_and_share_e2e.py
tests/integration/: _debug_blocks.py  _debug_blocks2.py  test_stage1_messages.py  test_stage2_tasks.py  test_stage3_calendar.py  test_stage4_docs.py  test_stage6_e2e.py
